--- a/pellegrinoAgnati/pellegrinoAgnati/MainWindow.xaml
+++ b/pellegrinoAgnati/pellegrinoAgnati/MainWindow.xaml
@@ -5,42 +5,69 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:pellegrinoAgnati"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid KeyDown="window_keyDown">
-        <!-- righe-->
-        <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-        <!-- colonne-->
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="148*"/>
-            <ColumnDefinition Width="auto" MinWidth="210"/>
-            <ColumnDefinition Width="147*"/>
-        </Grid.ColumnDefinitions>
+        Title="MainWindow" Height="470" Width="800"
+        
+        KeyDown="window_keyDown">
+    <Grid Name="grid" Margin="0,0,0,1">
+        <!-- griglia tutto lo schermo -->
         <!-- sfondo-->
         <Grid.Background>
             <ImageBrush ImageSource="Assets/sfondo.png"/>
         </Grid.Background>
-
         <!-- UI col canvas-->
-
         <Viewbox Grid.Row="1"
                  Grid.Column="1"
                  Margin="0,0,0,20">
             <Canvas x:Name="UI"
-                Background="#101010"
+                
                 Width="250"
-                Height="450"
+                Height="470"
                 ClipToBounds="True" 
                 Loaded="GameCanvas_Loaded"/>
         </Viewbox>
-        <TextBlock HorizontalAlignment="Center" Margin="0,170,0,0" Grid.Row="1" TextWrapping="Wrap" Text="blocco corrente" VerticalAlignment="Top" Height="37" Width="103"/>
-        <TextBlock HorizontalAlignment="Center" Margin="0,170,0,0" Grid.Row="1" TextWrapping="Wrap" Text=" in arrivo" VerticalAlignment="Top" Height="37" Width="121" Grid.Column="2"/>
+
+        <!-- griglia di gioco -->
+        <Grid x:Name="gameGrid" Margin="26,18,0,0" Height="470" Width="243" HorizontalAlignment="Left" VerticalAlignment="Top" Background="Black">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="25"/>
+                <RowDefinition Height="25"/>
+                <RowDefinition Height="25"/>
+                <RowDefinition Height="25"/>
+                <RowDefinition Height="25"/>
+                <RowDefinition Height="25"/>
+                <RowDefinition Height="25"/>
+                <RowDefinition Height="25"/>
+                <RowDefinition Height="25"/>
+                <RowDefinition Height="25"/>
+                <RowDefinition Height="25"/>
+                <RowDefinition Height="25"/>
+                <RowDefinition Height="25"/>
+                <RowDefinition Height="25"/>
+                <RowDefinition Height="25"/>
+                <RowDefinition Height="25"/>
+
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="25"/>
+                <ColumnDefinition Width="25"/>
+                <ColumnDefinition Width="25"/>
+                <ColumnDefinition Width="25"/>
+                <ColumnDefinition Width="25"/>
+                <ColumnDefinition Width="25"/>
+                <ColumnDefinition Width="25"/>
+                <ColumnDefinition Width="25"/>
+                <ColumnDefinition Width="25"/>
+                <ColumnDefinition Width="25"/>
+                <ColumnDefinition Width="25"/>
+            </Grid.ColumnDefinitions>
+        </Grid>
+        <TextBlock HorizontalAlignment="Left" Margin="340,204,0,0" TextWrapping="Wrap" Text="blocco corrente" VerticalAlignment="Top" Height="37" Width="103"/>
+        <TextBlock HorizontalAlignment="Center" Margin="0,18,0,0" TextWrapping="Wrap" Text=" in arrivo" VerticalAlignment="Top" Height="37" Width="120"/>
         <Canvas Grid.RowSpan="2">
-            <Image x:Name="imgBlockCorrente" Height="100" Canvas.Left="93" Canvas.Top="205" Width="100"/>
+            <Image x:Name="imgBlockCorrente" Height="100" Canvas.Left="340" Canvas.Top="259" Width="100"/>
         </Canvas>
-        <Image x:Name="imgBlockNext" Grid.Column="2" HorizontalAlignment="Left" Height="100" Margin="81,207,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Width="100"/>
+        <Image x:Name="imgBlockNext" HorizontalAlignment="Left" Height="100" Margin="340,65,0,0" VerticalAlignment="Top" Width="100"/>
 
     </Grid>
+
 </Window>
